eg-ingress-controller.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: eg-ingress-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: eg-ingress-controller
      name: eg-ingress-controller
    spec:
      containers:
        - name: eg-ingress-controller
          image: IMAGE_NAME
          imagePullPolicy: Never
        - name: express-gateway
          image: expressgateway/express-gateway
          livenessProbe:
              httpGet:
                path: /users
                port: 9876
              initialDelaySeconds: 3
              periodSeconds: 3
